Fix a cut/paste error.

--- a/tbsetup/snmpit_test/snmpit_test.in
+++ b/tbsetup/snmpit_test/snmpit_test.in
@@ -3188,7 +3188,7 @@ sub doMakeVlan($$@) {
 	    VLan->RecordVlanInsertion($source_vlan, $stack->{STACKID});
 	}
 	if (defined($target_vlan) && $target_vlan->KeepInSync()) {
-	    setSwitchTrunkPath($source_vlan);
+	    setSwitchTrunkPath($target_vlan);
 	    VLan->RecordVlanInsertion($target_vlan, $stack->{STACKID});
 	}
     }
